# TestingExample

./: .gitignore  README.md  pyproject.toml
example/: calculate_features.py  constants.py  extract_data.py  schemas.py
tests/unit/: test_calculate_feats.py  test_extract_data.py
tests/unit/test_data/: expected_data.csv  raw_data.csv
